--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@rsuite/icons": "^1.0.2",
     "framer-motion": "^10.13.0",
     "react": "^18.2.0",
